// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders 1`] = `
<div
  className="sc-bdVaJa cahKXE"
/>
`;

exports[`Box renders with props 1`] = `
<div
  className="sc-bdVaJa juTkkz"
/>
`;

exports[`Flex renders 1`] = `
<div
  className="sc-htpNat eLQHN sc-bdVaJa iHZvIS"
/>
`;

exports[`Flex renders with props 1`] = `
<div
  className="sc-htpNat deySwf sc-bdVaJa iHZvIS"
  direction="column"
  wrap={true}
/>
`;

exports[`Flex renders with responsive props 1`] = `
<div
  className="sc-htpNat acOuK sc-bdVaJa iHZvIS"
  direction={
    Array [
      "column",
      "row",
    ]
  }
  wrap={
    Array [
      true,
      false,
    ]
  }
/>
`;

exports[`Grid renders 1`] = `
<div
  className="sc-bwzfXH fIMJGd sc-bdVaJa iHZvIS"
/>
`;
